--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -116,6 +116,10 @@
                         "title": "すでにインストール済みのMOD",
                         "description": "選択したすべてのMODはすでにインストールされています"
                     }
+                },
+                "drop-zone": {
+                    "text": "モッドをインポートする",
+                    "subtext": "「zip」または「dll」ファイルをここにドロップしてインポートする"
                 }
             },
             "dropdown": {
@@ -525,6 +529,17 @@
                     "errors": {
                         "no-mods": "このバージョンのModはインストールされていません 😑"
                     }
+                }
+            },
+            "import-mod": {
+                "titles": {
+                    "success": "モッドのインポートが完了しました",
+                    "error": "モッドのインポート中にエラーが発生しました"
+                },
+                "msgs": {
+                    "success": "モッドが正常にインポートされました。",
+                    "some-success": "一部のモッドが正常にインポートされました。",
+                    "no-dlls": "ファイルに \"dll\" ファイルが含まれていません。"
                 }
             }
         },
