--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -116,6 +116,10 @@
                         "title": "Моды уже установлены",
                         "description": "Все выбранные моды уже установлены"
                     }
+                },
+                "drop-zone": {
+                    "text": "Импортируйте свои моды",
+                    "subtext": "Перетащите ваши файлы \"zip\" или \"dll\" сюда для импорта"
                 }
             },
             "dropdown": {
@@ -525,6 +529,17 @@
                     "errors": {
                         "no-mods": "Для этой версии не было установлено модов 😑"
                     }
+                }
+            },
+            "import-mod": {
+                "titles": {
+                    "success": "Импорт модов завершен",
+                    "error": "Произошла ошибка при импорте модов"
+                },
+                "msgs": {
+                    "success": "Моды успешно импортированы.",
+                    "some-success": "Некоторые моды были успешно импортированы.",
+                    "no-dlls": "Файл(ы) не содержат файлов \"dll\"."
                 }
             }
         },
