--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -116,6 +116,10 @@
                         "title": "Mods ya instalados",
                         "description": "Todos los mods seleccionados ya están instalados"
                     }
+                },
+                "drop-zone": {
+                    "text": "Importa tus mods",
+                    "subtext": "Coloca tus archivos \"zip\" o \"dll\" aquí para importarlos"
                 }
             },
             "dropdown": {
@@ -525,6 +529,17 @@
                     "errors": {
                         "no-mods": "No hay mods instalados en esta versión 😑"
                     }
+                }
+            },
+            "import-mod": {
+                "titles": {
+                    "success": "Importación de mods completada",
+                    "error": "Ocurrió un error durante la importación de mods"
+                },
+                "msgs": {
+                    "success": "Mods importados con éxito.",
+                    "some-success": "Algunos mods fueron importados con éxito.",
+                    "no-dlls": "El(los) archivo(s) no contienen archivos \"dll\"."
                 }
             }
         },
