--- a/assets/jsons/translations/ko.json
+++ b/assets/jsons/translations/ko.json
@@ -116,6 +116,10 @@
                         "title": "이미 설치된 모드",
                         "description": "선택한 모든 모드가 이미 설치되었습니다."
                     }
+                },
+                "drop-zone": {
+                    "text": "모드를 가져오기",
+                    "subtext": "\"zip\" 또는 \"dll\" 파일을 여기에 드롭하여 가져오기"
                 }
             },
             "dropdown": {
@@ -525,6 +529,17 @@
                     "errors": {
                         "no-mods": "이 버전에 설치된 Mod가 없습니다 😑"
                     }
+                }
+            },
+            "import-mod": {
+                "titles": {
+                    "success": "모드 임포트 완료",
+                    "error": "모드 임포트 중 오류가 발생했습니다"
+                },
+                "msgs": {
+                    "success": "모드가 성공적으로 임포트되었습니다.",
+                    "some-success": "일부 모드가 성공적으로 임포트되었습니다.",
+                    "no-dlls": "파일에 \"dll\" 파일이 포함되어 있지 않습니다."
                 }
             }
         },
