--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -457,7 +457,7 @@
                     "OCULUS_LIB_NOT_FOUND": "Vérifie que l'application Oculus est correctement installée, et que les librairies sont bien définies dans Oculus.",
                     "PROTON_NOT_SET": "Définissez le chemin de Proton dans les paramètres.",
                     "PROTON_NOT_FOUND": "Définissez le chemin de Proton dans les paramètres.",
-                    "ORIGINAL_OCULUS_NOT_INSTALLED": "Téléchargez la version originale de Beat Saber depuis Oculus avant de l'ouvrir."
+                    "ORIGINAL_OCULUS_NOT_INSTALLED": "Beat Saber doit être installé depuis l'application Oculus avant de l'ouvrir."
                 },
                 "actions": {
                     "STEAM_NOT_RUNNING": "Lancer Steam"
