[feature] add unselect all action in mods panel

--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -105,7 +105,8 @@
                         "latest": "Último",
                         "description": "Descripción",
                         "dropdown": {
-                            "uninstall-all": "Desinstalar todos"
+                            "uninstall-all": "Desinstalar todos",
+                            "unselect-all": "Deseleccionar todo"
                         }
                     }
                 },
