--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -105,7 +105,8 @@
                         "latest": "Neueste",
                         "description": "Beschreibung",
                         "dropdown": {
-                            "uninstall-all": "Alle deinstallieren"
+                            "uninstall-all": "Alle deinstallieren",
+                            "unselect-all": "Alle abwählen"
                         }
                     }
                 },
