--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -105,7 +105,8 @@
                         "latest": "Latest",
                         "description": "Description",
                         "dropdown": {
-                            "uninstall-all": "Uninstall all"
+                            "uninstall-all": "Uninstall all",
+                            "unselect-all": "Unselect all"
                         }
                     }
                 },
