--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -41,7 +41,9 @@
                 "advanced-launch": {
                     "button": "Lancement avancé",
                     "placeholder": "Arguments supplémentaires ex: --revert; --nowait"
-                }
+                },
+                "skipvr": "Ignorer SteamVR",
+                "skipvr-description": "Empêche SteamVR de s'ouvrir automatiquement avec Beat Saber, activez-le si vous utilisez un autre runtime VR comme WiVRn ou Monado avec lequel SteamVR pourrait interférer."
             },
             "maps": {
                 "search-bar": {
@@ -427,11 +429,13 @@
             "success": {
                 "titles": {
                     "BS_LAUNCHING": "Lancement...🚀",
-                    "STEAM_LAUNCHING": "Steam se lance !"
+                    "STEAM_LAUNCHING": "Steam se lance !",
+                    "SKIPPING_STEAM_LAUNCH": "Sauter le lancement de Steam"
                 },
                 "msg": {
                     "BS_LAUNCHING": "N'oublie pas de t'échauffer 😉",
-                    "STEAM_LAUNCHING": "Beat Saber se lancera automatiquement après Steam."
+                    "STEAM_LAUNCHING": "Beat Saber se lancera automatiquement après Steam.",
+                    "SKIPPING_STEAM_LAUNCH": "J'espère que vous savez ce que vous faites :)"
                 }
             },
             "errors": {
