[feat-76] added drag n drop in mods slide dropdown

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -106,6 +106,7 @@
                         "latest": "Neueste",
                         "description": "Beschreibung",
                         "dropdown": {
+                            "import-mods": "Mods importieren",
                             "uninstall-all": "Alle deinstallieren",
                             "unselect-all": "Alle abwählen"
                         }
