--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -106,6 +106,7 @@
                         "latest": "最新",
                         "description": "說明",
                         "dropdown": {
+                            "import-mods": "モッドをインポート",
                             "uninstall-all": "全てアンインストールする",
                             "unselect-all": "すべて選択解除"
                         }
