--- a/assets/jsons/translations/ko.json
+++ b/assets/jsons/translations/ko.json
@@ -106,6 +106,7 @@
                         "latest": "최신",
                         "description": "설명",
                         "dropdown": {
+                            "import-mods": "모드 가져오기",
                             "uninstall-all": "모두 제거",
                             "unselect-all": "모두 선택 해제"
                         }
