[translation] added translation for 'outdated' text
* better ui for outdated tag
* refactored TitleBarTags to not pass the singleton in its attribs

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -21,6 +21,9 @@
         "warning": "Achtung",
         "continue": "Weiter"
     },
+    "title-bar": {
+        "outdated": "veraltet"
+    },
     "nav-bar": {
         "add-version": "Version hinzufügen",
         "settings": "Einstellungen",
