--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -21,6 +21,9 @@
         "warning": "Внимание",
         "continue": "Продолжить"
     },
+    "title-bar": {
+        "outdated": "устаревший"
+    },
     "nav-bar": {
         "add-version": "Добавить версию игры",
         "settings": "Настройки",
