--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -21,6 +21,9 @@
         "warning": "Attention",
         "continue": "Continuer"
     },
+    "title-bar": {
+        "outdated": "démodé"
+    },
     "nav-bar": {
         "add-version": "Ajouter une version",
         "settings": "Paramètres",
