[translation] fix some translations

--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -22,7 +22,7 @@
         "continue": "Continuer"
     },
     "title-bar": {
-        "outdated": "démodé"
+        "outdated": "obsolète"
     },
     "nav-bar": {
         "add-version": "Ajouter une version",
