--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -22,7 +22,7 @@
         "continue": "继续"
     },
     "title-bar": {
-        "outdated": "过时的"
+        "outdated": "过时"
     },
     "nav-bar": {
         "add-version": "添加版本",
