--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -601,6 +601,10 @@
                     "ENOSPC": "The disk is full, make some space and try again.",
                     "UNKNOWN_ERROR": "An unknown error has occurred while linking the folder."
                 }
+            },
+            "adding-error": {
+                "title": "Adding shared folder failed",
+                "msg": "You can't add \"{folder}\" to shared folders"
             }
         },
         "create-launch-shortcut": {
@@ -804,6 +808,10 @@
                 "unlink-folder": "Unlink Folder",
                 "link-all": "Link all"
             }
+        },
+        "adding-shared-folder": {
+            "title": "Adding Shared Folder",
+            "description": "Are you sure you want to add \"{folder}\" to shared folder?"
         },
         "create-launch-shortcut": {
             "title": "Create a shortcut",
